fix finding longest ascending and descending sequences